--- a/techy/build.gradle
+++ b/techy/build.gradle
@@ -1,8 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'eclipse-wtp'
+apply plugin: 'maven'
 
-repositories { mavenCentral() }
+eclipse.classpath.downloadJavadoc = true
+eclipse.classpath.downloadSources = true
+
+repositories {
+	mavenCentral() 	
+}
 
 ext {
 	//Generic Properties
@@ -67,7 +73,6 @@ ext {
 
 buildscript {
 	repositories { mavenLocal() }
-
 	dependencies { classpath "org.vbossica:gradle-glassfish3-plugin:1.2-SNAPSHOT" }
 }
 
@@ -84,10 +89,10 @@ configurations.all {
 		eachDependency { details ->
 			if (!details.requested.version) {
 				if (details.requested.group == 'org.springframework') {
-					details.useVersion '3.2.2.RELEASE'
+					details.useVersion "${spring_framework_version}"
 				}
 				else if (details.requested.group == 'org.hibernate') {
-					details.useVersion '4.1.9.Final'
+					details.useVersion "${hibernate_version}"
 				}
 			}
 		}
@@ -204,3 +209,5 @@ processTestResources {
 }
 
 war.baseName = 'techy'
+
+
