Added a request mapping for the root (/) path

--- a/techy/src/main/webapp/WEB-INF/web.xml
+++ b/techy/src/main/webapp/WEB-INF/web.xml
@@ -8,5 +8,7 @@
 	<display-name>Techy</display-name>
 	<description>An application using the latest technologies in EE7</description>
     
-    
+    <welcome-file-list>
+    	<welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 </web-app>
