--- a/techy/build.gradle
+++ b/techy/build.gradle
@@ -56,6 +56,7 @@ ext {
 	//Testing
 	junit_version = '4.11'
 	hamcrest_version = '1.3'
+	mockito_version = '1.9.5'
 
 	//Dates
 	jodatime_hibernate_version = '1.3'
@@ -186,6 +187,7 @@ dependencies {
 	testCompile("junit:junit:${junit_version}")
 	testCompile("org.hamcrest:hamcrest-library:${hamcrest_version}")
 	testCompile("org.hamcrest:hamcrest-core:${hamcrest_version}")
+	testCompile("org.mockito:mockito-core:${mockito_version}")
 
 }
 
