--- a/techy/build.gradle
+++ b/techy/build.gradle
@@ -112,7 +112,29 @@ configurations {
 
 	compile.extendsFrom spring, web, date, tools, hibernate
 	runtime.extendsFrom database, log
+	
+	integrationTestCompile {
+		extendsFrom testCompile
+	}
+	integrationTestRuntime {
+		extendsFrom integrationTestCompile, testRuntime
+	}
 }
+
+sourceSets {
+	integrationTest {
+		java.srcDir file('src/integrationTest/java')
+		resources.srcDir file('src/integrationTest/resources')
+		compileClasspath = sourceSets.main.output + sourceSets.test.output + configurations.integrationTestCompile
+		runtimeClasspath = output + compileClasspath + configurations.integrationTestRuntime
+	}
+}
+
+task integrationTest(type: Test, dependsOn: jar) {
+	testClassesDir = sourceSets.integrationTest.output.classesDir
+	classpath = sourceSets.integrationTest.runtimeClasspath
+}
+
 
 dependencies {
 	spring("org.springframework.data:spring-data-jpa:${spring_data_jpa_version}") {
@@ -213,5 +235,4 @@ processTestResources {
 }
 
 war.baseName = 'techy'
-
 
