Added another implementation of UserRepository using QueryDSL. Added QueryDSL code generation to gradle build. Added component scan in PersistenceContext to get the new repository scanned.

--- a/techy/.classpath
+++ b/techy/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/integrationTest/java"/>
 	<classpathentry kind="src" path="src/integrationTest/resources"/>
+	<classpathentry kind="src" path="src/main/generated"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="src/test/java"/>
