Rearranged the build.gradle script. Changed glassfish plugin version, after recompiling the plugin to remove tasks.add and use tasks.create for gradle.

--- a/techy/.classpath
+++ b/techy/.classpath
@@ -412,5 +412,8 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.springsource.ide.eclipse.gradle.dsld.classpathcontainer"/>
+	<classpathentry kind="con" path="GROOVY_DSL_SUPPORT"/>
+	<classpathentry kind="con" path="GROOVY_SUPPORT"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
