--- a/techy/build.gradle
+++ b/techy/build.gradle
@@ -5,7 +5,10 @@ apply plugin: 'eclipse-wtp'
 eclipse.classpath.downloadJavadoc = true
 eclipse.classpath.downloadSources = true
 
-repositories { mavenCentral() 	 }
+repositories { 
+	 mavenCentral() 
+	 maven { url "http://repo.springsource.org/milestone" }
+}
 
 buildscript {
 	repositories { mavenLocal() }
@@ -86,6 +89,7 @@ ext {
 	//Spring
 	spring_data_jpa_version = '1.3.4.RELEASE'
 	spring_framework_version = '3.2.4.RELEASE'
+	spring_security_version = '3.2.0.RC1'
 
 	//Thymeleaf
 	thymeleaf_version = '2.0.17'
@@ -152,6 +156,9 @@ dependencies {
 		exclude group: 'commons-logging', module: 'commons-logging'
 	}
 
+	spring("org.springframework.security:spring-security-core:${spring_security_version}")
+	spring("org.springframework.security:spring-security-web:${spring_security_version}")
+	spring("org.springframework.security:spring-security-config:${spring_security_version}")
 	spring("org.springframework:spring-jdbc")
 	spring("org.springframework:spring-aop")
 	spring("org.springframework:spring-webmvc")
