--- a/techy/build.gradle
+++ b/techy/build.gradle
@@ -12,15 +12,15 @@ repositories {
 
 buildscript {
 	repositories { mavenLocal() }
-	dependencies { classpath "org.vbossica:gradle-glassfish4-plugin:5.0-SNAPSHOT" }
+	dependencies { classpath "org.vbossica:gradle-glassfish4-plugin:1.0-SNAPSHOT" }
 }
 
 
 apply plugin: 'glassfish4'
 
 glassfish4 {
-	asadminExec = file('C:/glassfish4/glassfish/bin/asadmin.bat')
-	domainDir = file('C:/glassfish4/glassfish/domains/others')
+	asadminExec = file('/Users/anazzubair/glassfish4/glassfish/bin/asadmin')
+	domainDir = file('/Users/anazzubair/glassfish4/glassfish/domains/domain1')
 	domainName = "others"
 }
 
@@ -82,14 +82,14 @@ compileJava.source generateQueryDSL.destinationDir
 
 ext {
 	//Generic Properties
-	java_version = '1.7'
+	java_version = '1.8'
 	project_build_sourceEncoding = 'UTF-8'
 	project_reporting_outputEncoding = 'UTF-8'
 
 	//Spring
-	spring_data_jpa_version = '1.3.4.RELEASE'
-	spring_framework_version = '3.2.4.RELEASE'
-	spring_security_version = '3.2.0.RC1'
+	spring_data_jpa_version = '1.8.0.RELEASE'
+	spring_framework_version = '4.1.6.RELEASE'
+	spring_security_version = '4.0.1.RELEASE'
 
 	//Thymeleaf
 	thymeleaf_version = '2.0.17'
@@ -103,8 +103,8 @@ ext {
 	jaxb_impl_version = '2.2.7-b53'
 
 	//Hibernate
-	hibernate_version = '4.2.4.Final'
-	hibernate_jpa_version = '1.0.1.Final'
+	hibernate_version = '4.3.10.Final'
+	hibernate_jpa_version = '1.0.0.Final'
 
 	//QueryDSL
 	query_dsl_version = '3.2.2'
@@ -176,7 +176,7 @@ dependencies {
 		exclude group: 'asm', module: 'asm-attrs'
 	}
 	hibernate("org.hibernate:hibernate-entitymanager")
-	hibernate("org.hibernate.javax.persistence:hibernate-jpa-2.0-api:${hibernate_jpa_version}")
+	hibernate("org.hibernate.javax.persistence:hibernate-jpa-2.1-api:${hibernate_jpa_version}")
 	hibernate("org.hibernate:hibernate-validator:${hibernate_validator_version}")
 	hibernate("org.hibernate:hibernate-ehcache")
 
