--- a/techy/gradle.properties
+++ b/techy/gradle.properties
@@ -1,2 +1,2 @@
 org.gradle.daemon=true
-org.gradle.java.home=C:\\Program Files\\Java\\jdk1.7.0_25
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_45.jdk/Contents/Home
